Agregue un meteorito

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                         <img src="/layers/clouds_1.png">
                 </div>
             </div>
+            <div class="imagen seccion-caida">
+                <img src="/layers/meteoro.png" alt="persona">
+            </div>
             
 
         </section>
